Bug fix: IsInvisible and IsHidden not working for Radio Buttons

--- a/Content/less/bwakabats.less
+++ b/Content/less/bwakabats.less
@@ -456,6 +456,10 @@ Other
     padding-right: @input-height-base;
 }
 
+.form-control-static {
+  margin-bottom: @form-group-margin-bottom;
+}
+
 /*
 bwakabats-grid.less
 **************************************************************************
